03_Kubernetes/02_KCAD/00_sample_yaml/admission-Control/pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2024-11-02T21:17:22Z"
  labels:
    app: pod-with-override
  name: pod-with-override
  namespace: default
  resourceVersion: "3141"
  uid: a966b305-2868-4c8e-8d13-9344ebd379ff
spec:
  containers:
    - command:
        - sh
        - -c
        - echo I am running as user $(id -u)
      image: busybox
      imagePullPolicy: Always
      name: busybox
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-j89cd
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: controlplane
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: OnFailure
  schedulerName: default-scheduler
  securityContext:
    runAsNonRoot: false
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: kube-api-access-j89cd
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: "2024-11-02T21:17:24Z"
      status: "False"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2024-11-02T21:17:22Z"
      reason: PodCompleted
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2024-11-02T21:17:22Z"
      reason: PodCompleted
      status: "False"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2024-11-02T21:17:22Z"
      reason: PodCompleted
      status: "False"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2024-11-02T21:17:22Z"
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: containerd://0af73b1bbcad0798cf2f1b16add80f83f76071145480a0f6e34acc67945145cf
      image: docker.io/library/busybox:latest
      imageID: docker.io/library/busybox@sha256:768e5c6f5cb6db0794eec98dc7a967f40631746c32232b78a3105fb946f3ab83
      lastState: {}
      name: busybox
      ready: false
      restartCount: 0
      started: false
      state:
        terminated:
          containerID: containerd://0af73b1bbcad0798cf2f1b16add80f83f76071145480a0f6e34acc67945145cf
          exitCode: 0
          finishedAt: "2024-11-02T21:17:23Z"
          reason: Completed
          startedAt: "2024-11-02T21:17:23Z"
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-j89cd
          readOnly: true
          recursiveReadOnly: Disabled
  hostIP: 192.29.205.3
  hostIPs:
    - ip: 192.29.205.3
  phase: Succeeded
  podIP: 10.244.0.7
  podIPs:
    - ip: 10.244.0.7
  qosClass: BestEffort
  startTime: "2024-11-02T21:17:22Z"
